@@ -1,3 +1,6 @@
+2016/09/04 v121
+	1. Use a new GameTooltip to avoid hooking slow down the item's scan.
+
 2016/09/02 v120
 	1. Bless of paladin would be shown in the raid panel.
 
